# books

./: .gitignore  LICENSE.md  README.md  application.hpp  books.cpp  crop.cpp  crop.hpp  crophandle.cpp  crophandle.hpp  croppreview.cpp  croppreview.hpp  croprect.cpp  croprect.hpp  featuredetector.cpp  featuredetector.hpp  featuredetectorparams.hpp  featuredetectorpool.cpp  featuredetectorpool.hpp  fitnessmetrics.cpp  fitnessmetrics.hpp  image.cpp  image.hpp  imagedata.cpp  imagedata.hpp  imageexporter.cpp  imageexporter.hpp  imageexporterpool.cpp  imageexporterpool.hpp  imageloader.cpp  imageloader.hpp  imageloaderpool.cpp  imageloaderpool.hpp  imagepreview.cpp  imagepreview.hpp  imagestore.cpp  imagestore.hpp  mainwindow.cpp  mainwindow.hpp  meson.build  progresswindow.cpp  (+6 more)
assets/: ui-resources.xml
assets/ui/: MainWindow.glade  MainWindow.ui  ProgressWindow.ui
assets/win32/: books.rc  make-icon.sh
data/ui/: MainWindow.ui  ProgressWindow.ui
data/win32/: books.rc  make-icon.sh
filter/: bgr2grey.cpp  bgr2grey.hpp  canny.cpp  canny.hpp  dilate.cpp  dilate.hpp  filter.cpp  filter.hpp  filterchain.cpp  filterchain.hpp  filters_all.hpp  medianblur.cpp  medianblur.hpp  normalise.cpp  normalise.hpp  threshold.cpp  threshold.hpp
scripts/: dist-win32.sh
src/: books.cpp  crophandle.cpp  crophandle.hpp  croprect.cpp  croprect.hpp  featuredetector.cpp  featuredetector.hpp  featuredetectorparams.hpp  featuredetectorpool.cpp  featuredetectorpool.hpp  fitnessmetrics.cpp  fitnessmetrics.hpp  imagedata.cpp  imagedata.hpp  imageexporter.cpp  imageexporter.hpp  imageexporterpool.cpp  imageexporterpool.hpp  imageloader.cpp  imageloader.hpp  imageloaderpool.cpp  imageloaderpool.hpp  imagepreview.cpp  imagepreview.hpp  imagestore.cpp  imagestore.hpp  mainwindow.cpp  mainwindow.hpp  meson.build  progresswindow.cpp  progresswindow.hpp  worker.cpp  worker.hpp  workerpool.cpp  workerpool.hpp  workqueue.cpp  workqueue.hpp
src/util/: box.cpp  box.hpp  point.hpp
util/: box.cpp  box.hpp  point.hpp
