sources += files('books.cpp',
            'mainwindow.cpp',
            'progresswindow.cpp',
            'imagepreview.cpp',
            'croprect.cpp',
            'crophandle.cpp',
            'imageloader.cpp',
            'imageloaderpool.cpp',
            'imagedata.cpp',
            'imageexporter.cpp',
            'imageexporterpool.cpp',
            'workerpool.cpp',
            'imagestore.cpp',
            'featuredetector.cpp',
            'featuredetectorpool.cpp',
            'fitnessmetrics.cpp',
            'util/box.cpp')
